[package]
name = "spatial-display"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# remove dynamic_linking when compiling for release
bevy = "0.15.0-rc.2"
# bevy = { version = "0.15.0-rc.2", features = ["dynamic_linking"] }
bevy_framepace = "0.17.1"

hidapi = { version = "2.6.3" }
tinyjson = { version = "2.5.1" }
bytemuck = { version = "1.13.1" }
byteorder = "1.4"
nalgebra = { version = "0.32.3", default-features = false, features = ["std"] }

dcmimu = "0.2.2"

async-hid = "0.1.0"

winit = "0.30.5"
tray-item = "0.10.0"
tokio = { version = "1.41.0", features = ["full"] }
core-graphics2 = { version = "0.4.1", default-features = false, features = [
  "display",
  "objc",
  "window",
] }
core-media = { version = "0.5.1", default-features = false, features = [
  "objc",
] }
core-video = { version = "0.4.3", features = ["objc"] }
objc2 = "0.5.2"
objc2-foundation = { version = "0.2.2", features = [
  "NSArray",
  "NSDictionary",
  "NSError",
  "NSGeometry",
  "NSString",
] }
dispatch2 = "0.1.0"
core-foundation = { version = "0.10.0", default-features = false }
rand = "0.8.5"
ar-drivers = { path = "./ar-drivers" }
libc = "0.2.161"
screen-capture-kit = "0.3.1"

[dev-dependencies]
clap = { version = "4.3", features = ["derive"] }

[workspace]
resolver = "2"                # Important! wgpu/Bevy needs this!
members = ["ar-drivers", "."]

# Enable optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
